--- a/style.css
+++ b/style.css
@@ -691,5 +691,17 @@ i{
 /* =============================== */
 
 @media (max-width: 768px) {
-    
+    .hero_section{
+        width: 100%;
+        height: 450px;
+        h2{
+            padding-left: 5px;
+            font-size: 25px;
+        }
+        img{
+            width: 320px;
+            height: 400px;
+            padding-left: 5px;
+        }
+    }
 }
